--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   leancloud_storage: 0.1.3
+  shared_preferences: 0.5.6+2
 
 dev_dependencies:
   flutter_test:
